release: consolidate SpawnWP 0.5.33
